logs/django-roa.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/django_roa'...
Listing './lib/python3.5/site-packages/django_roa/db'...
Compiling './lib/python3.5/site-packages/django_roa/db/models.py'...
***   File "./lib/python3.5/site-packages/django_roa/db/models.py", line 266
    raise Exception, "Static method get_resource_url_list is not defined."
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/django_roa/db/query.py'...
***   File "./lib/python3.5/site-packages/django_roa/db/query.py", line 181
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/django_roa/management'...
Listing './lib/python3.5/site-packages/django_roa/management/commands'...
Compiling './lib/python3.5/site-packages/django_roa/management/commands/inspectresources.py'...
***   File "./lib/python3.5/site-packages/django_roa/management/commands/inspectresources.py", line 12
    print '%s (%s)' % (model.__name__, model.get_resource_url_list())
                  ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/django_roa/remoteauth'...
Listing './lib/python3.5/site-packages/django_roa-1.7.egg-info'...
Listing './lib/python3.5/site-packages/examples'...
Listing './lib/python3.5/site-packages/examples/django_roa_client'...
Listing './lib/python3.5/site-packages/examples/django_roa_server'...
Listing './lib/python3.5/site-packages/examples/twitter_roa'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
